# Copyright (C) 2021 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(
    default_visibility = [
        "//visibility:public",
    ],
)

load("//build/kernel/kleaf:constants.bzl", "aarch64_gz_outs")
load("//build/kernel/kleaf:common_kernels.bzl", "define_common_kernels", "define_db845c")

define_common_kernels()

# Sync with build.config.db845c
define_db845c(
    name = "db845c",
    outs = aarch64_gz_outs + [
        "arch/arm64/boot/dts/qcom/qrb5165-rb5.dtb",
        "arch/arm64/boot/dts/qcom/sdm845-db845c.dtb",
    ],
    module_outs = [
        # keep sorted
        "crypto/michael_mic.ko",
        "drivers/base/regmap/regmap-sdw.ko",
        "drivers/base/regmap/regmap-slimbus.ko",
        "drivers/base/regmap/regmap-spmi.ko",
        "drivers/bus/mhi/host/mhi.ko",
        "drivers/clk/qcom/clk-qcom.ko",
        "drivers/clk/qcom/clk-rpmh.ko",
        "drivers/clk/qcom/clk-spmi-pmic-div.ko",
        "drivers/clk/qcom/dispcc-sdm845.ko",
        "drivers/clk/qcom/dispcc-sm8250.ko",
        "drivers/clk/qcom/gcc-sdm845.ko",
        "drivers/clk/qcom/gcc-sm8250.ko",
        "drivers/clk/qcom/gpucc-sdm845.ko",
        "drivers/clk/qcom/gpucc-sm8250.ko",
        "drivers/clk/qcom/lpass-gfm-sm8250.ko",
        "drivers/clk/qcom/videocc-sdm845.ko",
        "drivers/clk/qcom/videocc-sm8250.ko",
        "drivers/cpufreq/qcom-cpufreq-hw.ko",
        "drivers/dma-buf/heaps/system_heap.ko",
        "drivers/dma/qcom/bam_dma.ko",
        "drivers/extcon/extcon-usb-gpio.ko",
        "drivers/firmware/qcom-scm.ko",
        "drivers/gpio/gpio-wcd934x.ko",
        "drivers/gpu/drm/bridge/display-connector.ko",
        "drivers/gpu/drm/bridge/lontium-lt9611.ko",
        "drivers/gpu/drm/bridge/lontium-lt9611uxc.ko",
        "drivers/gpu/drm/dp/drm_dp_helper.ko",
        "drivers/gpu/drm/msm/msm.ko",
        "drivers/gpu/drm/scheduler/gpu-sched.ko",
        "drivers/hwspinlock/qcom_hwspinlock.ko",
        "drivers/i2c/busses/i2c-designware-core.ko",
        "drivers/i2c/busses/i2c-designware-platform.ko",
        "drivers/i2c/busses/i2c-qcom-geni.ko",
        "drivers/i2c/busses/i2c-qup.ko",
        "drivers/i2c/busses/i2c-rk3x.ko",
        "drivers/i2c/i2c-dev.ko",
        "drivers/i2c/i2c-mux.ko",
        "drivers/i2c/muxes/i2c-mux-pca954x.ko",
        "drivers/iio/adc/qcom-spmi-adc5.ko",
        "drivers/iio/adc/qcom-vadc-common.ko",
        "drivers/input/misc/pm8941-pwrkey.ko",
        "drivers/interconnect/qcom/icc-bcm-voter.ko",
        "drivers/interconnect/qcom/icc-osm-l3.ko",
        "drivers/interconnect/qcom/icc-rpmh.ko",
        "drivers/interconnect/qcom/qnoc-sdm845.ko",
        "drivers/interconnect/qcom/qnoc-sm8250.ko",
        "drivers/iommu/arm/arm-smmu/arm_smmu.ko",
        "drivers/irqchip/qcom-pdc.ko",
        "drivers/mailbox/qcom-apcs-ipc-mailbox.ko",
        "drivers/mailbox/qcom-ipcc.ko",
        "drivers/media/platform/qcom/venus/venus-core.ko",
        "drivers/media/platform/qcom/venus/venus-dec.ko",
        "drivers/media/platform/qcom/venus/venus-enc.ko",
        "drivers/mfd/qcom-spmi-pmic.ko",
        "drivers/mfd/wcd934x.ko",
        "drivers/misc/fastrpc.ko",
        "drivers/mmc/host/cqhci.ko",
        "drivers/mmc/host/sdhci-msm.ko",
        "drivers/net/can/spi/mcp251xfd/mcp251xfd.ko",
        "drivers/net/wireless/ath/ath.ko",
        "drivers/net/wireless/ath/ath10k/ath10k_core.ko",
        "drivers/net/wireless/ath/ath10k/ath10k_pci.ko",
        "drivers/net/wireless/ath/ath10k/ath10k_snoc.ko",
        "drivers/net/wireless/ath/ath11k/ath11k.ko",
        "drivers/net/wireless/ath/ath11k/ath11k_ahb.ko",
        "drivers/net/wireless/ath/ath11k/ath11k_pci.ko",
        "drivers/nvmem/nvmem_qfprom.ko",
        "drivers/phy/qualcomm/phy-qcom-qmp.ko",
        "drivers/phy/qualcomm/phy-qcom-qusb2.ko",
        "drivers/phy/qualcomm/phy-qcom-snps-femto-v2.ko",
        "drivers/phy/qualcomm/phy-qcom-usb-hs.ko",
        "drivers/pinctrl/qcom/pinctrl-lpass-lpi.ko",
        "drivers/pinctrl/qcom/pinctrl-msm.ko",
        "drivers/pinctrl/qcom/pinctrl-sdm845.ko",
        "drivers/pinctrl/qcom/pinctrl-sm8250.ko",
        "drivers/pinctrl/qcom/pinctrl-spmi-gpio.ko",
        "drivers/pinctrl/qcom/pinctrl-spmi-mpp.ko",
        "drivers/power/reset/qcom-pon.ko",
        "drivers/power/reset/reboot-mode.ko",
        "drivers/power/reset/syscon-reboot-mode.ko",
        "drivers/regulator/gpio-regulator.ko",
        "drivers/regulator/qcom-rpmh-regulator.ko",
        "drivers/regulator/qcom_spmi-regulator.ko",
        "drivers/regulator/qcom_usb_vbus-regulator.ko",
        "drivers/remoteproc/qcom_common.ko",
        "drivers/remoteproc/qcom_pil_info.ko",
        "drivers/remoteproc/qcom_q6v5.ko",
        "drivers/remoteproc/qcom_q6v5_adsp.ko",
        "drivers/remoteproc/qcom_q6v5_mss.ko",
        "drivers/remoteproc/qcom_q6v5_pas.ko",
        "drivers/remoteproc/qcom_q6v5_wcss.ko",
        "drivers/remoteproc/qcom_sysmon.ko",
        "drivers/reset/reset-qcom-aoss.ko",
        "drivers/reset/reset-qcom-pdc.ko",
        "drivers/rpmsg/qcom_glink.ko",
        "drivers/rpmsg/qcom_glink_rpm.ko",
        "drivers/rpmsg/qcom_glink_smem.ko",
        "drivers/rpmsg/qcom_smd.ko",
        "drivers/rpmsg/rpmsg_ns.ko",
        "drivers/rtc/rtc-pm8xxx.ko",
        "drivers/scsi/ufs/ufs_qcom.ko",
        "drivers/slimbus/slim-qcom-ngd-ctrl.ko",
        "drivers/slimbus/slimbus.ko",
        "drivers/soc/qcom/apr.ko",
        "drivers/soc/qcom/cmd-db.ko",
        "drivers/soc/qcom/cpr.ko",
        "drivers/soc/qcom/llcc-qcom.ko",
        "drivers/soc/qcom/mdt_loader.ko",
        "drivers/soc/qcom/pdr_interface.ko",
        "drivers/soc/qcom/qcom_aoss.ko",
        "drivers/soc/qcom/qcom_rpmh.ko",
        "drivers/soc/qcom/qmi_helpers.ko",
        "drivers/soc/qcom/rmtfs_mem.ko",
        "drivers/soc/qcom/rpmhpd.ko",
        "drivers/soc/qcom/smem.ko",
        "drivers/soc/qcom/smp2p.ko",
        "drivers/soc/qcom/smsm.ko",
        "drivers/soc/qcom/socinfo.ko",
        "drivers/soc/qcom/spm.ko",
        "drivers/soundwire/soundwire-bus.ko",
        "drivers/soundwire/soundwire-qcom.ko",
        "drivers/spi/spi-geni-qcom.ko",
        "drivers/spi/spi-pl022.ko",
        "drivers/spi/spi-qcom-qspi.ko",
        "drivers/spi/spi-qup.ko",
        "drivers/spmi/spmi-pmic-arb.ko",
        "drivers/thermal/qcom/lmh.ko",
        "drivers/thermal/qcom/qcom-spmi-adc-tm5.ko",
        "drivers/thermal/qcom/qcom-spmi-temp-alarm.ko",
        "drivers/thermal/qcom/qcom_tsens.ko",
        "drivers/tty/serial/msm_serial.ko",
        "drivers/usb/common/ulpi.ko",
        "drivers/usb/host/ohci-hcd.ko",
        "drivers/usb/host/ohci-pci.ko",
        "drivers/usb/host/ohci-platform.ko",
        "drivers/usb/typec/qcom-pmic-typec.ko",
        "drivers/watchdog/pm8916_wdt.ko",
        "drivers/watchdog/qcom-wdt.ko",
        "net/qrtr/qrtr.ko",
        "net/qrtr/qrtr-mhi.ko",
        "net/qrtr/qrtr-smd.ko",
        "net/qrtr/qrtr-tun.ko",
        "sound/soc/codecs/snd-soc-dmic.ko",
        "sound/soc/codecs/snd-soc-hdmi-codec.ko",
        "sound/soc/codecs/snd-soc-lpass-macro-common.ko",
        "sound/soc/codecs/snd-soc-lpass-va-macro.ko",
        "sound/soc/codecs/snd-soc-lpass-wsa-macro.ko",
        "sound/soc/codecs/snd-soc-max98927.ko",
        "sound/soc/codecs/snd-soc-rl6231.ko",
        "sound/soc/codecs/snd-soc-rt5663.ko",
        "sound/soc/codecs/snd-soc-wcd-mbhc.ko",
        "sound/soc/codecs/snd-soc-wcd9335.ko",
        "sound/soc/codecs/snd-soc-wcd934x.ko",
        "sound/soc/codecs/snd-soc-wsa881x.ko",
        "sound/soc/qcom/qdsp6/q6adm.ko",
        "sound/soc/qcom/qdsp6/q6afe.ko",
        "sound/soc/qcom/qdsp6/q6afe-clocks.ko",
        "sound/soc/qcom/qdsp6/q6afe-dai.ko",
        "sound/soc/qcom/qdsp6/q6apm-dai.ko",
        "sound/soc/qcom/qdsp6/q6apm-lpass-dais.ko",
        "sound/soc/qcom/qdsp6/q6asm.ko",
        "sound/soc/qcom/qdsp6/q6asm-dai.ko",
        "sound/soc/qcom/qdsp6/q6core.ko",
        "sound/soc/qcom/qdsp6/q6prm.ko",
        "sound/soc/qcom/qdsp6/q6prm-clocks.ko",
        "sound/soc/qcom/qdsp6/q6routing.ko",
        "sound/soc/qcom/qdsp6/snd-q6apm.ko",
        "sound/soc/qcom/qdsp6/snd-q6dsp-common.ko",
        "sound/soc/qcom/snd-soc-qcom-common.ko",
        "sound/soc/qcom/snd-soc-sdm845.ko",
        "sound/soc/qcom/snd-soc-sm8250.ko",
    ],
)
